--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,20 +11,20 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Research/Projects"
+    url: /projects/  
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Notes"
+    url: /notes/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Articles"
+    url: /articles/
     
   - title: "CV"
-    url: /cv/
+    url: /files/Resume.pdf
     
   # - title: "CV"
   #   url: /cv-json/
