--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   name             : "Arya Bhakta"
   pronouns         : # example: "she/her"  
   bio              : "Econ | Data Science student"
-  location         : "India"
+  location         : #
   employer         : "Calcutta University | IIT-J"
   url              : # URL
   email            : "aryabhakta2016@gmail.com" 
@@ -48,13 +48,13 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : #
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -63,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/arya-bhakta-1995a024b/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -71,7 +71,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : # 
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
