--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/arya-bhakta-1995a024b/"
+  linkedin         : "arya-bhakta-1995a024b"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
